--- a/public/style.css
+++ b/public/style.css
@@ -101,7 +101,8 @@ video {
   margin: 0 2px;
 }
 
-.unmute stop {
+.unmute,
+.stop {
   color: #cc3b3c;
 }
 
@@ -112,10 +113,5 @@ video {
 
 .main-chat-window::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-  background-color: #242324;
-}
-
-.scrollbar-primary {
-  scrollbar-color: #4285f4 #f5f5f5;
+  background-color: #445;
 }
