--- a/views/room.ejs
+++ b/views/room.ejs
@@ -29,17 +29,17 @@
     ></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
-    <script
-      src="https://kit.fontawesome.com/a076d05399.js"
-      crossorigin="anonymous"
-    ></script>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+      rel="stylesheet"
+    />
 
     <script>
       const roomId = '<%=roomId%>'
       const peer = new Peer(undefined, {
         path: '/peerjs',
         host: '/',
-        port: '443'
+        port: '3000'
       })
     </script>
   </head>
